--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
       <img src="./Images/BooksSS1.jpg" alt="ss1" />
       <img src="./Images/BooksSS.jpg" alt="ss" />
     </div>
+    
+     <a href='https://www.symptoma.com/en/info/covid-19'>Corona Virus 2020</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=93bfbfe630b7f0d709cbd9e9d65e8fcc183b56a7'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/756249/t/5"></script>
+    
   </body>
 </html>
