--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         much <br />Download & get started...
       </h4>
       <div>
-        <a href="./Comp_Books.apk" download="Comp_Books"
+        <a href="https://drive.google.com/uc?export=download&id=1W_6LjTkTCWAirX_ffW3HHKK7qagBIlTn" download="Comp_Books"
           ><i class="fa fa-arrow-circle-down"></i
         ></a>
       </div>
